--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -4,9 +4,7 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:root="clr-namespace:LanguageWeaverProvider"
-		xmlns:style="clr-namespace:LanguageWeaverProvider.Style"
 		xmlns:local="clr-namespace:LanguageWeaverProvider.ViewModel"
-		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 		xmlns:edgeView="clr-namespace:LanguageWeaverProvider.View.Edge"
 		xmlns:cloudView="clr-namespace:LanguageWeaverProvider.View.Cloud"
 		xmlns:edgeViewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Edge"
@@ -31,8 +29,6 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
-				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/GroupBox.xaml" />
-				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/WindowsBorder.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<Style TargetType="Image">
@@ -53,24 +49,23 @@
 		</ResourceDictionary>
 	</Window.Resources>
 
-	<Border Style="{StaticResource WindowControlBorderStyle}">
+	<Border>
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 
-			<style:WindowsControl Grid.Row="0"
-								  Margin="0 24" />
-			
-			
+			<Image Grid.Row="0"
+				   Source="../Resources/lwMainLogo.png"
+				   Margin="48 24 48 0" />
 
 			<Border Grid.Row="1"
 					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
 					Background="#ffffff"
 					CornerRadius="4"
-					Margin="24 0 24 24"
+					Margin="24"
 					Padding="12 24 12 12">
 				<Border.Effect>
 					<DropShadowEffect ShadowDepth="0"
@@ -143,7 +138,7 @@
 					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
 					Background="#ffffff"
 					CornerRadius="4"
-					Margin="24 0 24 24"
+					Margin="24"
 					Padding="12 24 12 12">
 				<Border.Effect>
 					<DropShadowEffect ShadowDepth="0"
