--- a/LanguageWeaverProvider/Style/GroupBox.xaml
+++ b/LanguageWeaverProvider/Style/GroupBox.xaml
@@ -1,15 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-	<Style x:Key="DefaultGroupBox" TargetType="GroupBox">
+	<Style x:Key="DefaultGroupBox"
+		   TargetType="GroupBox">
 		<Setter Property="Margin"
-				Value="5"/>
+				Value="5" />
 		<Setter Property="BorderBrush"
 				Value="#D3D3D3" />
 		<Setter Property="HeaderTemplate">
 			<Setter.Value>
 				<DataTemplate>
-					<TextBlock Text="{Binding}" FontFamily="Segoe UI" Foreground="#636463" FontWeight="Normal" FontSize="13" HorizontalAlignment="Center" Padding="4 0"/>
+					<TextBlock Text="{Binding}"
+							   FontFamily="Segoe UI"
+							   Foreground="#636463"
+							   FontWeight="Normal"
+							   FontSize="13"
+							   HorizontalAlignment="Center"
+							   Padding="4 0" />
 				</DataTemplate>
 			</Setter.Value>
 		</Setter>
