--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -74,7 +74,8 @@
 						IsEnabled="False"
 						Cursor="Hand"
 						Width="200"
-						Margin="0 8" />
+						Margin="0 8" 
+						Visibility="Collapsed"/>
 				<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
 						Style="{StaticResource Sdl.Button.PrimaryStyle}"
 						Command="{Binding SelectAuthenticationTypeCommand}"
