--- a/LanguageWeaverProvider/View/FeedbackView.xaml
+++ b/LanguageWeaverProvider/View/FeedbackView.xaml
@@ -1,34 +1,33 @@
-﻿<Window x:Class="LanguageWeaverProvider.View.FeedbackView"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:local="clr-namespace:LanguageWeaverProvider.View"
-		xmlns:Style="clr-namespace:LanguageWeaverProvider.Style"
-		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-		xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
-		d:DataContext="{d:DesignInstance viewModel:FeedbackViewModel}"
-		WindowStyle="None"
-		MouseLeftButtonDown="Window_MouseLeftButtonDown"
-		mc:Ignorable="d"
-		d:DesignHeight="450"
-		d:DesignWidth="800">
+﻿<UserControl x:Class="LanguageWeaverProvider.View.FeedbackView"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:root="clr-namespace:LanguageWeaverProvider"
+			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
+			 d:DataContext="{d:DesignInstance viewModel:FeedbackViewModel}"
+			 MouseLeftButtonDown="Window_MouseLeftButtonDown"
+			 mc:Ignorable="d"
+			 d:DesignHeight="450"
+			 d:DesignWidth="800">
 
-	<Window.Resources>
+	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="../Style/General.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
+				<ResourceDictionary Source="../Style/General.xaml" />
 				<ResourceDictionary Source="../Style/Buttons.xaml" />
 				<ResourceDictionary Source="../Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
-	</Window.Resources>
+	</UserControl.Resources>
 
 	<Grid>
 		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
@@ -38,23 +37,23 @@
 		</Grid.RowDefinitions>
 
 		<TextBlock Grid.Row="0"
-				   Text="Give feedback!"
+				   Text="{x:Static root:PluginResources.FeedbackView_Title}"
 				   Style="{StaticResource Sdl.TextBlock.GenericTitleTextStyle}"
 				   HorizontalAlignment="Center"
 				   FontSize="20"
-				   Margin="8 0 8 16" />
+				   Margin="0 8" />
 
 		<TextBlock Grid.Row="1"
-				   Text="Let us know how we did!"
+				   Text="{x:Static root:PluginResources.FeedbackView_Message}"
 				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 				   HorizontalAlignment="Center"
 				   Focusable="True"
-				   Margin="16 0 16 0" />
+				   Margin="0" />
 
 		<StackPanel Grid.Row="2"
 					Orientation="Horizontal"
 					HorizontalAlignment="Center"
-					Margin="16 8">
+					Margin="0 4">
 			<Button x:Name="star_1"
 					Style="{StaticResource TransparentButtonStyle}"
 					MouseEnter="Star_MouseEnter"
@@ -137,12 +136,57 @@
 			</Button>
 		</StackPanel>
 
-		<TextBlock Grid.Row="3"
-				   Text="{Binding UserEstimation}" 
-				   Style="{StaticResource Sdl.TextBlock.GenericTitleTextStyle}"
-				   HorizontalAlignment="Center"/>
+		<ComboBox Grid.Row="3"
+				  ItemsSource="{Binding QualityEstimations}"
+				  SelectedItem="{Binding SelectedQE, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+				  Style="{StaticResource Sdl.ComboBox.Generic.Style}" 
+				  VerticalContentAlignment="Center"
+				  Width="160"
+				  Height="24"
+				  Margin="0 8 0 0"/>
 
-		<Border Grid.Row="4"
+		<GroupBox Grid.Row="4"
+				  Margin="24 8"
+				  Padding="8 16">
+			<GroupBox.Header>
+				<TextBlock Text="{x:Static root:PluginResources.FeedbackView_GroupBox_Header}"
+						   Margin="4 0" />
+			</GroupBox.Header>
+			
+			<Grid>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+
+				<TextBlock Grid.Row="0"
+						   Grid.Column="0"
+						   Text="{x:Static root:PluginResources.FeedbackView_GroupBox_Translation}"
+						   Margin="0 2 2 2" />
+
+				<TextBlock Grid.Row="1"
+						   Grid.Column="0"
+						   Text="{x:Static root:PluginResources.FeedbackView_GroupBox_QE}"
+						   Margin="0 2 2 2"/>
+
+				<TextBlock Grid.Row="0"
+						   Grid.Column="1"
+						   Text="{Binding MTTranslation}"
+						   TextWrapping="Wrap"
+						   Margin="4 2" />
+
+				<TextBlock Grid.Row="1"
+						   Grid.Column="1"
+						   Text="{Binding OriginalQE}"
+						   Margin="4 2"/>
+			</Grid>
+		</GroupBox>
+
+		<Border Grid.Row="5"
 				Grid.ColumnSpan="2"
 				BorderBrush="#c0c0c0"
 				BorderThickness="1"
@@ -161,7 +205,7 @@
 							HorizontalAlignment="Center"
 							BorderBrush="#d4d4d4"
 							Margin="16 0">
-						<TextBlock Text="Leave a message (optional)"
+						<TextBlock Text="{x:Static root:PluginResources.FeedbackView_OptionalMessage}"
 								   Focusable="True"
 								   TextWrapping="Wrap"
 								   Foreground="#c0c0c0"
@@ -178,11 +222,12 @@
 			</ScrollViewer>
 		</Border>
 
-		<Button Grid.Row="5"
+		<Button Grid.Row="6"
 				Grid.ColumnSpan="2"
-				Content="Send feedback"
+				Content="{x:Static root:PluginResources.FeedbackView_Button_SendFeedback}"
+				Command="{Binding SendFeedbackCommand}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Margin="8" />
 
 	</Grid>
-</Window>
+</UserControl>
