--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -12,13 +12,14 @@
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance local:CredentialsMainViewModel}"
+		MouseLeftButtonDown="Window_MouseLeftButtonDown"
 		BorderThickness="1"
 		BorderBrush="#c0c0c0"
 		WindowStartupLocation="CenterScreen"
 		Title="Language Weaver Provider"
 		ResizeMode="NoResize"
 		WindowStyle="None"
-		Height="450"
+		Height="500"
 		Width="600"
 		FontFamily="Segoe UI"
 		d:DesignHeight="450"
