--- a/LanguageWeaverProvider/View/FeedbackView.xaml
+++ b/LanguageWeaverProvider/View/FeedbackView.xaml
@@ -6,6 +6,7 @@
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
 			 d:DataContext="{d:DesignInstance viewModel:FeedbackViewModel}"
+			 Loaded="UserControl_Loaded"
 			 MouseLeftButtonDown="Window_MouseLeftButtonDown"
 			 mc:Ignorable="d"
 			 d:DesignHeight="450"
@@ -18,7 +19,6 @@
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
-				<ResourceDictionary Source="../Style/General.xaml" />
 				<ResourceDictionary Source="../Style/Buttons.xaml" />
 				<ResourceDictionary Source="../Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
