Change icons for glossary buttons

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
@@ -61,6 +61,8 @@
 
             <Style TargetType="Button"
                    BasedOn="{StaticResource Sdl.Button.EmbeddedStyle}">
+                <Setter Property="VerticalAlignment"
+                        Value="Bottom" />
             </Style>
 
             <converters:AddAllItemConverter x:Key="AddAllItemConverter" />
@@ -198,17 +200,21 @@
 
             <Button DockPanel.Dock="Left"
                     Margin="0 0 2 0"
+                    Foreground="Gray"
+                    FontSize="14"
+                    Padding="0 0.5"
                     AutomationProperties.Name="Add new glossary"
                     ToolTip="Add new glossary (Alt+A)"
                     Command="{Binding AddNewGlossaryCommand}"
                     Content="➕" />
 
-            <Button Content="📂"
-                    Margin="0 0 5 0"
-                    AutomationProperties.Name="Import glossaries"
+            <Button AutomationProperties.Name="Import glossaries"
                     FontSize="18"
+                    Margin="-2 0 0 0"
                     Command="{Binding ImportGlossariesCommand}"
                     HorizontalAlignment="Center">
+                <Image Source="../Resources/deepl_ImportGlossaries.ico"
+                       Height="16" />
                 <Button.ToolTip>
                     <TextBlock>
                          Import glossaries (Alt+Q)
@@ -218,8 +224,7 @@
                 </Button.ToolTip>
             </Button>
 
-            <Button Height="25"
-                    Name="Export_Button"
+            <Button Name="Export_Button"
                     AutomationProperties.Name="Export glossaries"
                     Click="ExportButton_Click"
                     ToolTip="Export selected glossaries (Alt+X)">
@@ -235,43 +240,26 @@
                     </ContextMenu>
                 </Button.ContextMenu>
 
-                <Path Data="F1 M512,512z M0,0z M421.24,269.93L451.24,269.93 451.24,429.84A48.72,48.72,0,0,1,402.58,478.5L82.77,478.5A48.72,48.72,0,0,1,34.11,429.84L34.11,110A48.72,48.72,0,0,1,82.77,61.37L242.68,61.37 242.68,91.37 82.77,91.37A18.68,18.68,0,0,0,64.11,110L64.11,429.84A18.68,18.68,0,0,0,82.77,448.5L402.58,448.5A18.68,18.68,0,0,0,421.24,429.84z M352.24,33.5L352.24,63.5 426.64,63.5 249.5,240.68 270.71,261.89 447.89,84.71 447.89,159.11 477.89,159.11 477.89,33.5z"
-                      Height="18"
-                      Margin="0 0 5 -2"
-                      Stretch="Uniform"
-                      StrokeThickness="0.1">
-                    <Path.Style>
-                        <Style TargetType="Path">
-                            <Setter Property="Fill"
-                                    Value="Black" />
-                            <Setter Property="Stroke"
-                                    Value="Black" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsMouseOver, ElementName=Export_Button}"
-                                             Value="True">
-                                    <Setter Property="Fill"
-                                            Value="Red" />
-                                    <Setter Property="Stroke"
-                                            Value="Red" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Path.Style>
-                </Path>
+                <Image Source="../Resources/deepl_ExportGlossaries.ico"
+                       Height="16" />
             </Button>
 
-            <Button Content="⇑"
-                    Command="{Binding ImportEntriesCommand}"
+            <Button Command="{Binding ImportEntriesCommand}"
                     AutomationProperties.Name="Import entries into selected glossaries"
                     ToolTip="Import entries into selected glossaries (Alt+D)"
                     FontSize="24"
-                    HorizontalAlignment="Center" />
-            
+                    HorizontalAlignment="Center">
+                <Image Source="../Resources/deepl_Glossarytransfer.ico"
+                       Height="16" />
+            </Button>
+
             <Button Content="🗑️"
                     Click="DeleteButton_Click"
+                    Foreground="Gray"
+                    Padding="0 0.5"
                     AutomationProperties.Name="Delete glossary"
                     ToolTip="Delete selected glossaries (Delete)"
-                    FontSize="16"
+                    FontSize="14"
                     HorizontalAlignment="Center" />
         </StackPanel>
 
@@ -285,6 +273,7 @@
 
         <Button Content="OK"
                 Name="Ok_Button"
+                Margin="0 5 0 0"
                 Grid.Row="3"
                 HorizontalAlignment="Right"
                 Click="OkButton_Click"
