--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
@@ -153,33 +153,29 @@
         <DockPanel Grid.Row="3"
                    LastChildFill="False">
             <Button DockPanel.Dock="Right"
-                    Margin="0 5"
+                    Margin="0 5 0 0"
                     Name="Apply_Button"
                     IsDefault="True"
                     Click="ApplyButton_Click"
                     Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     Content="Apply" />
             <Button DockPanel.Dock="Left"
-                    Margin="0 7 0 5"
+                    FontSize="14"
+                    Margin="0 0 -4 0"
                     Click="AddRowButton_Click"
+                    VerticalAlignment="Bottom"
                     AutomationProperties.Name="Add new entry"
+                    Foreground="Gray"
                     ToolTip="Add new entry (Alt+A)"
                     Content="➕" />
 
-            <Button Content="📂"
-                    AutomationProperties.Name="Import glossaries"
-                    FontSize="18"
+            <Button AutomationProperties.Name="Import glossaries"
                     Click="ImportButton_Click"
+                    VerticalAlignment="Bottom"
                     HorizontalAlignment="Center"
-                    ToolTip="Import entries from another glossary (Alt+Q)"/>
-
-            <Button Margin="-2 2 0 0"
-                    Name="Edit_Button"
-                    DockPanel.Dock="Left"
-                    AutomationProperties.Name="Edit glossary"
-                    Content="✏"
-                    Click="EditButton_Click"
-                    ToolTip="Edit glossary (Alt+E)" />
+                    ToolTip="Import entries from another glossary (Alt+Q)">
+                <Image Source="../Resources/deepl_Importentries.ico" Height="16"/>
+            </Button>
         </DockPanel>
     </Grid>
 </Window>
